/*
 * Copyright (C) 2024 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/fonoster
 *
 * This file is part of Fonoster
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.calls.v1beta2;

// TODO: Consider using Timestamp instead of int64
// import "google/protobuf/timestamp.proto";

// Calls service definition
service Calls {
  // Call a number and returns the call status
  rpc CreateCall (CreateCallRequest) returns (CreateCallResponse) {}
  // Get a list of Call Detail Records
  rpc ListCalls (ListCallsRequest) returns (ListCallsResponse) {}
  // Get a Call Detail Record
  rpc GetCall (GetCallRequest) returns (CallDetailRecord) {}
  // Stream call status
  rpc TrackCall (TrackCallRequest) returns (stream TrackCallResponse) {}
}

enum CallType {
  PROGRAMMABLE = 0;
  SIP_TRUNKING = 1;
}

enum HangupCause {
  NORMAL_CLEARING = 0;
  CALL_REJECTED = 1;
  UNALLOCATED = 2;
  NO_USER_RESPONSE = 3;
  NO_ROUTE_DESTINATION = 4;
  NO_ANSWER = 5;
  USER_BUSY = 6;
  NOT_ACCEPTABLE_HERE = 7;
  SERVICE_UNAVAILABLE = 8;
  INVALID_NUMBER_FORMAT = 9;
  UNKNOWN = 10;
}

enum CallStatus {
  QUEUED = 0;
  RINGING = 1;
  IN_PROGRESS = 2;
  COMPLETED = 3;
  FAILED = 4;
  BUSY = 5;
  // TODO: Refactor to avoid clash with HangupCause
  // NO_ANSWER = 6;
  CANCELED = 7;
  REJECTED = 8;
  TIMEOUT = 9;
  // TODO: Refactor to avoid clash with HangupCause
  // UNKNOWN = 10;
}

enum CallDirection {
  INBOUND = 0;
  OUTBOUND = 1;
}

// Message for a Call Detail Record
message CallDetailRecord {
  // The unique identifier of the Call
  string ref = 1;
  // The call type
  CallType type = 2;
  // The call status
  CallStatus status = 3;
  // Hangup cause
  HangupCause hangup_cause = 4;
  // Start time of the call
  int64 started_at = 5;
  // End time of the call
  int64 ended_at = 6;
  // The from number (E.164 format or SIP URI)
  string from = 7;
  // The to number (E.164 format or SIP URI)
  string to = 8;
  // The call duration in seconds
  int32 duration = 9;
  // The call direction
  CallDirection direction = 10;
}

// The request message for Calls.Call
message CreateCallRequest {
  // The from number (E.164 format or SIP URI)
  string from = 1;
  // The to number (E.164 format or SIP URI)
  string to = 2;
  // Optional application reference
  string app_ref = 3;
}

// The response message for Calls.Call
message CreateCallResponse {
  // The refence of the call
  string ref = 1;
}

// The request message for Calls.ListCalls
message ListCallsRequest {
  // Optional start date in RFC3339 format
  string after = 1;
  // Optional end date in RFC3339 format
  string before = 2;
  // Optional call type
  CallType type = 3;
  // Optional call status
  CallStatus status = 4;
  // Optional from number (E.164 format or SIP URI)
  string from = 5;
  // Optional to number (E.164 format or SIP URI)
  string to = 6;
  // The page size
  int32 page_size = 7;
  // The page token
  string page_token = 8;
}

// The response message for Calls.ListCalls
message ListCallsResponse {
  // The list of Call Detail Records
  repeated CallDetailRecord items = 1;
  // The token to retrieve the next page of results
  string next_page_token = 2;
}

// The request message for Calls.GetCall
message GetCallRequest {
  // The unique identifier of the Call
  string ref = 1;
}

// The request message for Calls.TrackCall
message TrackCallRequest {
  // The unique identifier of the Call
  string ref = 1;
}

// The response message for Calls.TrackCall
message TrackCallResponse {
  // The refence of the call
  string ref = 1;
  // The call status
  CallStatus status = 2;
}