/*
 * Copyright (C) 2024 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/fonoster
 *
 * This file is part of Fonoster
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.voice.v1beta2;

// The voice service definition
service Voice {
  rpc CreateSession(stream VoiceInStream) returns (stream VoiceOutStream) {}
}

// CreateSessionRequest is the request message for the CreateSession method
message CreateSessionRequest {
  // The account making the request on behalf of the caller
  string access_key_id = 1;
  // Reference to an application living in the platform
  string app_ref = 2;
  // gRPC endpoint for the voice service
  string endpoint = 3;
  // PSTN number or SIP URI associated with the session
  string ingress_number = 4;
  // The caller ID for the phone calling from the
  string caller_id = 5;
  // The caller number for the phone calling from the
  string caller_number = 6;
  // The session ID generated by the Media Server
  string session_id = 7;
  // Use this token to validate the provenance of the request
  // If the app_ref is provided, the token must include the app_ref as a claim
  string session_token = 8;
  // Metadata associated with the session
  map<string, string> metadata = 9;
}

// Answer command
message AnswerRequest {
  string session_id = 1;
}

message AnswerResponse {
  string session_id = 1;
}

// VoiceInStream is the input stream for the voice service
message VoiceInStream {
  oneof content {
    // Initial request to create a new session
    CreateSessionRequest request = 1;
    // Command to accept the call
    AnswerResponse answer_response = 2;
  }
}

// VoiceOutStream is the output stream for the voice service
message VoiceOutStream {
  oneof content {
    // Request to accept the call
    AnswerRequest answer_request = 1;
  }
}
